<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <!--<PreferenceCategory app:title="@string/messages_header">-->

    <EditTextPreference
        android:defaultValue="@string/default_display_name1"
        android:key="user_display_name"
        android:title="@string/pref_title_display_name"
        app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="@string/default_email_address"
            android:entries="@android:array/emailAddressTypes"
            android:key="user_email_address"
            android:title="@string/email_address"
            app:useSimpleSummaryProvider="true"/>
        <ListPreference
            android:defaultValue="@string/pref_default_favorite_social"
            android:entries="@array/pref_entries_favorite_social"
            android:entryValues="@array/pref_values_favorite_social"
            android:key="user_favorite_social"
            android:title="@string/pref_title_favorite_social"
            app:useSimpleSummaryProvider="true"/>

   <!-- </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>